--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,14 +35,13 @@
 
         </com.beardedhen.androidbootstrap.BootstrapWell>
 
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/currPath_Nav"
+        <com.roughike.bottombar.BottomBar
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            app:itemIconTint="@drawable/nav_selector"
-            app:itemTextColor="@drawable/nav_selector"
-            design:menu="@menu/path_change_menu"/>
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            app:bb_tabXmlResource="@xml/path_change_menu"
+            android:id="@+id/currPath_Nav"
+            app:bb_showShadow="false"/>
 
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
@@ -53,14 +52,20 @@
         android:layout_below="@+id/address"
         android:layout_above="@+id/bottom_navigation"/>
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bottom_navigation"
+    <!--<android.support.design.widget.BottomNavigationView-->
+        <!--android:id="@+id/bottom_navigation"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="start"-->
+        <!--design:menu="@menu/bottom_nav_items"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:background="@android:color/white"-->
+        <!--app:itemIconTint="@drawable/nav_selector"-->
+        <!--app:itemTextColor="@drawable/nav_selector"/>-->
+    <com.roughike.bottombar.BottomBar
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        design:menu="@menu/bottom_nav_items"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/white"
-        app:itemIconTint="@drawable/nav_selector"
-        app:itemTextColor="@drawable/nav_selector"/>
+        app:bb_tabXmlResource="@xml/bottom_nav_items"
+        android:id="@+id/bottom_navigation"/>
 </RelativeLayout>
