--- a/app/src/main/res/xml/bottom_nav_items_multiselect.xml
+++ b/app/src/main/res/xml/bottom_nav_items_multiselect.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tabs>
     <tab
+        id="@+id/menu_none" />
+    <tab
         id="@+id/menu_delete"
         title="@string/delete"
         icon="@drawable/ic_remove_circle_outline_black_24dp"/>
@@ -12,13 +14,4 @@
         id="@+id/menu_copy"
         title="@string/copy"
         icon="@drawable/ic_content_copy_black_24dp"/>
-    <tab
-        id="@+id/menu_paste"
-        title="@string/paste"
-        icon="@drawable/ic_content_paste_black_24dp"/>
-
-    <tab
-        id="@+id/menu_cancel"
-        title="@string/cancel"
-        icon="@drawable/ic_close_black_24dp"/>
 </tabs>
