--- a/app/src/main/res/layout/file_item.xml
+++ b/app/src/main/res/layout/file_item.xml
@@ -75,6 +75,7 @@ android:padding="6dip" >
     android:layout_alignWithParentIfMissing="true"
     android:layout_toRightOf="@id/file_icon"
     android:gravity="center_vertical"
+    android:maxLines="1"
     android:textSize="16sp" />
 
     <CheckBox
