--- a/app/src/main/res/xml/bottom_nav_items.xml
+++ b/app/src/main/res/xml/bottom_nav_items.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tabs>
     <tab
+        id="@+id/menu_none" />
+    <tab
         id="@+id/menu_filter"
         title="@string/filter"
         icon="@drawable/ic_tune_black_24dp"/>
