--- a/app/src/main/res/xml/path_change_menu.xml
+++ b/app/src/main/res/xml/path_change_menu.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tabs>
     <tab
+        id="@+id/menu_none" />
+    <tab
         id="@+id/menu_back"
         title="@string/back"
         icon="@drawable/ic_keyboard_backspace_black_24dp"/>
