--- a/filebrowser/src/main/res/menu/toolbar_default_menu.xml
+++ b/filebrowser/src/main/res/menu/toolbar_default_menu.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/action_search" android:title="@string/search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        android:icon="@drawable/ic_search_black_24dp" app:showAsAction="ifRoom" />
     <item android:id="@+id/action_showfoldersizes" android:title="@string/showfoldersize"
         android:icon="@drawable/ic_new_releases_black_24dp" app:showAsAction="ifRoom" />
     <item android:id="@+id/action_newfolder" android:title="@string/new_folder"
