--- a/filebrowser/src/main/res/layout/filebrowser_activity_main.xml
+++ b/filebrowser/src/main/res/layout/filebrowser_activity_main.xml
@@ -44,7 +44,9 @@
             app:bb_showShadow="false"/>
 
     </LinearLayout>
-    <android.support.v7.widget.RecyclerView
+    <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
+        app:fastScrollAutoHide="true"
+        app:fastScrollAutoHideDelay="1500"
         android:id="@+id/recycler_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
