Updated to Android-8 (API 27) and bug fixes - Fixed issue of display of extenstion less files when filter is applied - Added translations support - Updated FastScroll Lib. Hopefully no more crashes

--- a/filebrowser/src/main/res/layout/filter_options.xml
+++ b/filebrowser/src/main/res/layout/filter_options.xml
@@ -22,8 +22,8 @@
         <com.beardedhen.androidbootstrap.BootstrapButton
             android:layout_alignParentRight="true"
             android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="Ok"
+            android:layout_height="40dp"
+            android:text="@string/ok"
             app:bootstrapSize="md"
             android:layout_margin="10dp"
             android:id="@+id/okbutton"
