-Add Fragment version of FileBrowser so developers can implement the view directly. -Add new option to create file -Update Create Folder/File dialog to add cancel button

--- a/filebrowser/src/main/res/layout/dialog_with_text.xml
+++ b/filebrowser/src/main/res/layout/dialog_with_text.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:theme="@android:style/Theme.Dialog"
     android:orientation="vertical">
@@ -16,11 +16,10 @@
         app:bootstrapSize="md">
     </com.beardedhen.androidbootstrap.BootstrapEditText>
 
-    <RelativeLayout
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.beardedhen.androidbootstrap.BootstrapButton
-            android:layout_alignParentRight="true"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:minHeight="40dp"
@@ -30,6 +29,18 @@
             android:id="@+id/okbutton"
             app:roundedCorners="true"
             app:bootstrapBrand="success"/>
-    </RelativeLayout>
+
+        <com.beardedhen.androidbootstrap.BootstrapButton
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:minHeight="40dp"
+            android:text="@string/cancel"
+            app:bootstrapSize="md"
+            android:layout_margin="10dp"
+            android:id="@+id/cancelbutton"
+            app:roundedCorners="true"
+            app:bootstrapBrand="danger"/>
+
+    </TableRow>
 
 </LinearLayout>
